# symbolic_derivation

./: CMakeLists.txt  LICENSE  README.md  library.h  main.cpp
benchmarks/: CMakeLists.txt  derivatives.cpp
example/: CMakeLists.txt  main.cpp
include/fsd/: concepts.h  constant.h  error.h  operations.h  parser.h  term.h  tokenizer.h  variable.h
src/: CMakeLists.txt  constant.cpp  operations.cpp  parser.cpp  term.cpp  tokenizer.cpp  variable.cpp
tests/: CMakeLists.txt  parser_test.cpp  tokenizer_test.cpp
